--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -8,21 +8,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Houston Temperature:"
         android:layout_above="@id/weather_tv"
         android:layout_centerHorizontal="true"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        />
+        android:layout_marginBottom="8dp"
+        android:text="@string/houston_label"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/weather_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#000000"
+        android:layout_centerVertical="true"
+        android:textColor="@color/black"
         android:textSize="18sp"
         tools:text="temperature (°F)" />
 
